apps/infrastructure/argocd/overlays/stage/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-lab
    external-dns.alpha.kubernetes.io/hostname: argocd.stage.lab
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.stage.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argocd.stage.lab
      secretName: argocd-server-tls
